# dependency-assist.nvim

./: README.md  stylua.toml
lua/: dependency_assist.lua  pubspec_assist.lua
lua/dependency_assist/: api.lua  assistants.lua  helpers.lua  init.lua  pubspec_api.lua  supported_fts.lua  toml.lua  ui.lua  yaml.lua
lua/dependency_assist/dart/: formatter.lua  init.lua  pubspec_api.lua
lua/dependency_assist/dart/test/: pubspec.yaml  test.dart
lua/dependency_assist/formatters/: dart.lua  init.lua
lua/dependency_assist/rust/: crates_api.lua  formatter.lua  init.lua
lua/dependency_assist/rust/test/: Cargo.toml  test.rs
lua/dependency_assist/utils/: helpers.lua  levenshtein_distance.lua
lua/pubspec_assist/: api.lua  ui.lua
lua/pubspec_assist/models/: package.lua
lua/test/: pubspec.yaml
